# MirGovorit

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: docs.py  urls.py
api/products/: serializers.py  urls.py  views.py
apps/products/: admin.py  models.py  views.py
apps/products/management/commands/: create_test_data.py
apps/products/migrations/: 0001_initial.py
apps/products/templates/: recipes-list.html
core/: urls.py
core/settings/: __init__.py  base.py  development.py
